// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontFeatureSettings renders 0 1`] = `
Array [
  .c0 {
  font-feature-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders function 1`] = `
Array [
  .c0 {
  font-feature-settings: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders invalid theme path 1`] = `
Array [
  .c0 {
  font-feature-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders negative number 1`] = `
Array [
  .c0 {
  font-feature-settings: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-feature-settings: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-feature-settings: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-feature-settings: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-feature-settings: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-feature-settings: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-feature-settings: July;
}

@media May {
  .c0 {
    font-feature-settings: August;
  }
}

@media April {
  .c0 {
    font-feature-settings: September;
  }
}

@media January {
  .c0 {
    font-feature-settings: November;
  }
}

@media April {
  .c0 {
    font-feature-settings: August;
  }
}

@media June {
  .c0 {
    font-feature-settings: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: July;
}

@media May {
  .c0 {
    font-feature-settings: August;
  }
}

@media April {
  .c0 {
    font-feature-settings: September;
  }
}

@media January {
  .c0 {
    font-feature-settings: November;
  }
}

@media April {
  .c0 {
    font-feature-settings: August;
  }
}

@media June {
  .c0 {
    font-feature-settings: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-feature-settings: November;
  }
}

@media April {
  .c0 {
    font-feature-settings: January;
  }
}

@media January {
  .c0 {
    font-feature-settings: December;
  }
}

@media April {
  .c0 {
    font-feature-settings: April;
  }
}

@media June {
  .c0 {
    font-feature-settings: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-feature-settings: November;
  }
}

@media April {
  .c0 {
    font-feature-settings: January;
  }
}

@media January {
  .c0 {
    font-feature-settings: December;
  }
}

@media April {
  .c0 {
    font-feature-settings: April;
  }
}

@media June {
  .c0 {
    font-feature-settings: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-feature-settings: July;
  }
}

@media April {
  .c0 {
    font-feature-settings: August;
  }
}

@media January {
  .c0 {
    font-feature-settings: September;
  }
}

@media April {
  .c0 {
    font-feature-settings: November;
  }
}

@media June {
  .c0 {
    font-feature-settings: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-feature-settings: July;
  }
}

@media April {
  .c0 {
    font-feature-settings: August;
  }
}

@media January {
  .c0 {
    font-feature-settings: September;
  }
}

@media April {
  .c0 {
    font-feature-settings: November;
  }
}

@media June {
  .c0 {
    font-feature-settings: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-feature-settings: January;
  }
}

@media April {
  .c0 {
    font-feature-settings: December;
  }
}

@media January {
  .c0 {
    font-feature-settings: April;
  }
}

@media April {
  .c0 {
    font-feature-settings: May;
  }
}

@media June {
  .c0 {
    font-feature-settings: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-feature-settings: January;
  }
}

@media April {
  .c0 {
    font-feature-settings: December;
  }
}

@media January {
  .c0 {
    font-feature-settings: April;
  }
}

@media April {
  .c0 {
    font-feature-settings: May;
  }
}

@media June {
  .c0 {
    font-feature-settings: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders postitive number 1`] = `
Array [
  .c0 {
  font-feature-settings: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders string 1`] = `
Array [
  .c0 {
  font-feature-settings: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontFeatureSettings renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontFeatureSettings renders valid theme path 1`] = `
Array [
  .c0 {
  font-feature-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-feature-settings: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
